# bazel_graphviz_foreign

./: BUILD.bazel  MODULE.bazel  README.md  test.sh
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: test.yml
integration/: BUILD.bazel  MODULE.bazel
