module(
    name = "integration",
    version = "0.0.0",
)

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "gcc_toolchain", version = "0.9.0")


bazel_dep(name = "graphviz_foreign", version = "0.0.0", repo_name = "graphviz")
local_path_override(
    module_name = "graphviz_foreign",
    path = "../",
)
